[package]
name = "decentral-radar"
version = "0.1.0"
edition = "2021"
description = "RuView-inspired WiFi signal observatory built with Rust, egui, and Zig."
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/zang7777/six-eye"
repository = "https://github.com/zang7777/six-eye"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
serde_json = "1.0.149"
